# BluetoothA2DP

./: .gitignore  AUDIT.md  Cargo.toml  DESIGN.md  bluetooth_a2dp_architecture.md  bluetooth_failure_scenarios.md  bluetooth_state_machine.md  do-over.md  pipewire_audio_flow.md  pipewire_dsp_equalizer_design.md  production_deployment.md  prompt.txt  ui_wireframe.md  webui_design_reference.md
.github/workflows/: build.yml
docs/: bluetooth_testing_matrix.md  implementation_plan.md  latency_budget.md  pipewire_graph_reference.md
scripts/: install.sh
src/: lib.rs  main.rs
src/api/: mod.rs  routes.rs  websocket.rs
src/bluetooth/: adapter.rs  agent.rs  avrcp.rs  device.rs  events.rs  manager.rs  mod.rs
src/dsp/: biquad.rs  eq.rs  mod.rs  presets.rs
src/linein/: mod.rs
src/logging/: mod.rs
src/pipewire/: manager.rs  mod.rs  spectrum.rs
src/state/: app.rs  mod.rs
tests/: bluetooth_tests.rs  eq_tests.rs  state_tests.rs
web/: app.js  index.html  styles.css
