[package]
name = "soundsync"
version = "1.5.7"
edition = "2021"
description = "SoundSync — Bluetooth A2DP Sink with DSP EQ and Web UI"
authors = ["SoundSync"]
license = "MIT"

[lib]
name = "soundsync"
path = "src/lib.rs"

[[bin]]
name = "soundsync"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

# D-Bus for BlueZ (zbus 4.x; zvariant is a transitive dep, no need to pin)
zbus = { version = "4", features = ["tokio"] }

# PipeWire Rust bindings
# "spa" is NOT a separate crate — libspa is bundled as a re-export inside "pipewire"
pipewire = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Async utilities
futures-util = "0.3"

# Math for DSP
libm = "0.2"

# FFT for real-time spectrum analysis
rustfft = "6"

# File paths / dirs
dirs = "5"

# Time (used in state for device last-seen timestamps)
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
